# orderdd

./: .editorconfig  .gitignore  .space.kts  CODEOWNERS  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  ruff.toml  setup.py
orderdd/: __init__.py  bdd_ops.py  pn2.py  pointer_network.py
orderdd/datasets/: bdd_sizer.py  builder.py  generator.py  loader.py
scripts/: Untitled.ipynb  generate_expressions.py  ne795_project_v3.py  train.py  v3.ipynb
scripts/colab_with_stuttgart/: seq2seq.ipynb
test/: bdd_sizes.db  test_deps.py
tests/: test_bdd_ops.py  test_utils.py
tests/datasets/: test_generator.py  test_loader.py
